aws/01-vpc/igw.tf
# InternetGateway
resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.vpc.id}"

  tags = {
    Name = "${terraform.workspace}-igw"
  }
}
